--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "readline-vim": "0.3.x",
         "redis": "0.10.x",
         "request": "2.x.x",
-        "underscore": "1.x.x"
+        "underscore": "1.x.x",
+        "yargs": "1.3.x"
     }
 }
 
