--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "hashpipe",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "Object oriented shell experiment",
     "homepage": "http://github.com/spro/hashpipe",
     "repository": {
@@ -15,7 +15,7 @@
     ],
     "main": "lib/index.js",
     "bin": {
-        "hashpipe": "./repl.coffee"
+        "hashpipe": "lib/repl.js"
     },
     "dependencies": {
         "ansi": "0.3.x",
